--- a/doc/site/style.css
+++ b/doc/site/style.css
@@ -192,7 +192,7 @@ UL{
 }
 
 .menu, .site-menu {
-    padding:23px 0 0 24px;
+    padding: 25px 0 0 35px;
 }
 
 UL.content-list {
